v0.7 - Pending
	+ Set go navigation items' sensitivity based on context
	+ Bug: 1:1 images are sometimes incorrectly set to fit (Bjoern Martensen)

v0.6 - May 29, 2006
	+ In fullscreen mode, hide mouse cursor after 2 seconds of no movement
	+ Option to wrap around imagelist
	+ When in zoom-to-fit mode, fit the image when it's rotated
	+ Show broken icon if image not found (i.e. deleted) (Bjoern Martensen)
	+ Bug: Ensure that scrollbars don't show up unless needed
	+ Bug: Don't resize an image if it's at 100% zoom (David Shakaryan)
	+ Other small bugfixes

v0.5 - May 1, 2006
	+ Make open image mode configurable: smart, fit, 1:1, last (Bjoern Martensen)
	+ Option to navigate imagelist via mousewheel (default: on) (Bjoern Martensen)
	+ Add maximum/minimum zoom levels (Bjoern Martensen)
	+ Reduce border around image for fit mode (Bjoern Martensen)
	+ Have Go>Random not show images twice until all images have been shown once
	+ Allow numpad keys as shortcuts (Bjoern Martensen)
	+ Allow panning image additionally with left-click/drag (Bjoern Martensen)
	+ Revert retaining state of images in list introduced in v0.4
	+ Add hourglass feedback for loading images
	+ Bug: Small images don't zoom-to-fit (Bjoern Martensen)
	+ Bug: Some non-image files are thought to be images (Bjoern Martensen)
	+ Bug: Files/folders with spaces don't open from file manager (Bjoern Martensen)
	+ Bug: Some shortcuts don't work with numslock enabled (Bjoern Martensen)

v0.4 - April 25, 2006
	+ Removed <Alt> from navigational shortcuts
	+ Default to alphabetically populating the image list (Michael Campbell)
	+ Ability to go to first (Home) and last (End) image in list
	+ Retain zoom/flip/rotate state of images in list
	+ Additional preferences:
		- Open all images in current directory (Ralph Wabel)
		- Default directory for 'Open' dialog
	+ Fullscreen hides menu/tool/status bars

v0.3.1 - April 4, 2006
	+ Fixed inability to open a file from a file manager.

v0.3 - April 4, 2006