@@ -1,4 +1,3 @@
-+ image wrapping: yes/no/ask
 + Show animation (i.e. animated gifs)
 + Test on Windows/Mac?
 + Printing support - requires gnome libs..? (Bjoern Martensen)
