@@ -1,5 +1,6 @@
 v0.7 - Pending
 	+ Set go navigation items' sensitivity based on context
+	+ Image wrapping options: yes/no/prompt (Bjoern Martensen)
 	+ Bug: 1:1 images are sometimes incorrectly set to fit (Bjoern Martensen)
 
 v0.6 - May 29, 2006
